# moodle-parser

./: .gitignore  README.md  aerich.ini  docker-compose.yml  pyproject.toml
app/: gunicorn_conf.py  main.py  worker.py
app/applications/tests/: dto.py  models.py  routes.py  services.py  tasks.py
app/core/: celery_app.py  exceptions.py  init_app.py
app/core/base/: base_models.py
app/lib/: aws.py  celery_lock.py  profiling.py  redis.py  utils.py
app/migrations/models/: 0_20201206165926_init.sql  0_20201215180006_init.sql  0_20201222031408_init.sql  1_20201206170449_nullable_pre_question.sql  2_20201206173010_change_answer_fields.sql
app/parser/: constants.py  dto.py  exceptions.py  helpers.py  logic.py
app/settings/: celery_config.py  config.py  log_config.py
